Cria o endpoint listAllocations, controller e service
